# gemini-app

./: .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  dist-workspace.toml
.github/workflows/: cross-zigbuild.yml  cross.yml  release.yml  zigbuild.yml
gemini/: Cargo.toml
gemini-api/: Cargo.toml
gemini-api/src/: body.rs  lib.rs  model.rs  param.rs
gemini-api/src/body/: error.rs  mod.rs  request.rs  response.rs
gemini-api/src/model/: blocking.rs  mod.rs
gemini-tui/: Cargo.toml
gemini/migrations/: 20240229_create.sql  20240929_create.sql  20241025_add_index.sql
gemini/src/: component.rs  main.rs  model.rs  store.rs  ui.rs
gemini/src/model/: db.rs  mod.rs  view.rs
gemini/src/ui/: component.rs  enum_from.rs  mod.rs  props.rs  setting.rs  widget.rs
gemini/src/ui/component/: mod.rs
gemini/src/ui/component/input/: input_trait.rs  mod.rs  text_area.rs  text_field.rs
gemini/src/ui/component/popup/: delete_popup.rs  input_popup.rs  mod.rs
gemini/src/ui/component/scroll/: chat_item_list.rs  chat_show.rs  mod.rs
gemini/src/ui/page/: main_page.rs  mod.rs  setting_page.rs
gemini/src/utils/: char_utils.rs  db_utils.rs  image_utils.rs  mod.rs  store_utils.rs
