[workspace]
members = ["gemini-api", "gemini"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] } # 网络请求库
tokio = { version = "1.39.2", features = ["full"] } # 异步运行时
tokio-macros = "2.4.0" # 异步运行时宏
anyhow = "1.0.86" # 错误处理库
serde = { version = "1.0", features = ["derive"] } # 序列化/反序列化库
serde_json = "1.0.127" # 序列化/反序列化库
ratatui = "0.28.1" # 终端UI库
chrono = "0.4.38" # 时间处理库
nanoid = "0.4.0" # 唯一ID生成库
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] } # 数据库驱动库
image = "0.25.2" # 图像处理库
strum = { version = "0.26", features = ["derive"] } # 枚举增强库
rppal = "0.19.0"  # 外设访问
libc = "0.2.159"  # 系统调用库
hashbrown = "0.15.2"


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
