[package]
name = "gemini-api"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-macros = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
blocking = ["reqwest/blocking"]
