[package]
name = "gemini"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/reine-ishyanami/gemini-app"

[dependencies]
gemini-api = { path = "../gemini-api", features = ["blocking"]}
ratatui ={ workspace = true }
anyhow = { workspace = true }
chrono ={ workspace = true }
serde ={ workspace = true }
serde_json ={ workspace = true }

[[bin]]
name = "gemini"
path = "src/main.rs"
