[package]
name = "gemini"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/reine-ishyanami/gemini-app"

[dependencies]
gemini-api = { path = "../gemini-api", features = [
    "blocking",
    "image_analysis",
] }
ratatui = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
rusqlite = { workspace = true }

[[bin]]
name = "gemini"
path = "src/main.rs"
