[package]
name = "gemini"
version = "0.7.1"
edition = "2021"
repository = "https://github.com/reine-ishyanami/gemini-app"

[dependencies]
gemini-api = { path = "../gemini-api", features = [
    "blocking",
    "image_analysis",
] }
ratatui = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
rusqlite = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }

[[bin]]
name = "gemini"
path = "src/main.rs"

[target.aarch64-unknown-linux-gnu.dependencies]
rppal = { workspace = true }
libc = { workspace = true }

[target.armv7-unknown-linux-gnueabihf.dependencies]
rppal = { workspace = true }
libc = { workspace = true }
